_etc/backup/ingressRouteTCP.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-bu: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: kafka-1
  namespace: hyperauth
spec:
  entryPoints:
    - "9001"
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-1
          namespace: hyperauth
          port: 9092
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-bu: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: kafka-2
  namespace: hyperauth
spec:
  entryPoints:
    - "9002"
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-2
          namespace: hyperauth
          port: 9092
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-bu: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: kafka-3
spec:
  entryPoints:
    - "9003"
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-3
          namespace: hyperauth
          port: 9092
